change app name and icons

--- a/web/index.html
+++ b/web/index.html
@@ -14,22 +14,24 @@
     This is a placeholder for base href that will be replaced by the value of
     the `--base-href` argument provided to `flutter build`.
   -->
-  <base href="$FLUTTER_BASE_HREF">
+  <!-- <base href="$FLUTTER_BASE_HREF"> -->
 
   <meta charset="UTF-8">
   <meta content="IE=Edge" http-equiv="X-UA-Compatible">
-  <meta name="description" content="A new Flutter project.">
+  <meta name="description" content="A calculator for overall module grades">
 
   <!-- iOS meta tags & icons -->
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
-  <meta name="apple-mobile-web-app-title" content="module_grade_calculator_pappl">
+  <meta name="apple-mobile-web-app-title" content="Module Grade Calculator">
   <link rel="apple-touch-icon" href="icons/Icon-192.png">
+  <link rel="icon" href="/favicon.ico" sizes="any">
+    <link rel="apple-touch-icon" href="/apple-touch-icon.png">
 
   <!-- Favicon -->
   <link rel="icon" type="image/png" href="favicon.png"/>
 
-  <title>module_grade_calculator_pappl</title>
+  <title>Module Grade Calculator</title>
   <link rel="manifest" href="manifest.json">
 
   <script>
